after calculate attack except king

--- a/index.htm
+++ b/index.htm
@@ -93,8 +93,8 @@
 
     </div>
     <script src="designBoard.js"></script>
-    <script src="startBoard.js"></script>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
+
 </body>
 
 </html>
