--- a/index.htm
+++ b/index.htm
@@ -92,7 +92,7 @@
         </div>
 
     </div>
-    <script src="designBoard.js"></script>
+    <script type="module"  src="designBoard.js"></script>
     <script type="module" src="script.js"></script>
 
 </body>
